# sfCollectionHistory

./: .env  Cargo.toml  README.md
clinet/: .env  .env.prod  .prettierrc  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
clinet/src/app/: globals.css  layout.tsx  page.tsx
clinet/src/app/detail/: page.tsx
clinet/src/app/ranks/: page.tsx
clinet/src/client_api/: detail.ts  rank.ts  search.ts
clinet/src/components/: BookSelect.tsx  DataLineCharts.tsx  InclusionEntrance.tsx  InclusionMaintenance.tsx  LabelTypeSearchSelecter.tsx  LayoutHeader.tsx  MasterBookSelect.tsx  RankingFilter.tsx  SFConfigProvider.tsx  SuspenseSpin.tsx
clinet/src/layout/: DefaultLayout.tsx
clinet/src/request/: LoadingCount.ts  beforEach.ts  index.ts  reseponseEach.ts
clinet/src/types/: book.ts  enums.ts  response.ts
clinet/src/untils/: index.ts
script/synchronizationUpdates/: app.js  config.js  main.js  package-lock.json  pnpm-lock.yaml
server/: .env  Cargo.toml
server/src/: lib.rs  main.rs
server/src/controller/: book_controller.rs
server/src/dto/: book.rs
server/src/model/: book.rs  mod.rs  reader.rs  response.rs
server/src/modules/: mod.rs
server/src/mysql/: client.rs
server/src/schedule/: book.rs
server/src/service/: book_services.rs  mod.rs
src/: lib.rs  main.rs
src/controller/: book_controller.rs  user_controller.rs
src/model/: book.rs  response.rs  user.rs
src/modules/: mod.rs
src/schedule/: book.rs
src/service/: book_services.rs  user_service.rs
