[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "mysql" ] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
jsonwebtoken = "8"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
# Start Generation Here
serde_json = "1.0"
# Start Generation Here
cron = "0.9"
